--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -157,7 +157,7 @@ body {
   font-weight: 600;
   font-size: 16px;
   line-height: 19px;
-  margin-right: 20px;
+  margin: 0 20px;
   transition: color 0.3s ease-in-out;
   padding: 12px 0;
 }
