--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -234,6 +234,24 @@ body {
   /* padding-left: 5px; */
 }
 
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 @media only screen and (max-width: 600px) {
   .bg-home-hero {
     background-image: url("/images/mobile_home_hero_bg.png");
